AmherstGolfClub/Content/Site.css
body {
    padding-bottom: 20px;
}

.body-content {
    padding-left:109px;
    margin-left: 100px;
    max-width: 85%; 
}

.dl-horizontal dt {
    white-space: normal;
}

/************************************ABOUT TABLE******************************************/


/************************************SOCIAL MEDIA BUTTONS******************************************/
.media-buttons{
    position: relative;
    padding-top: 2%;
    left: 200px;
}

.media-buttons li {
    padding: 10px;
    margin:auto;
    text-decoration:none;
    display:inline;
}

.media-buttons li a{
    font-size:150%;
    color: #848a48;
}

.grow:hover{
    -webkit-transform: scale(2);
    -ms-transform: scale(2);
    -moz-transform: scale(2);
    -o-transform: scale(2);
    transform: scale(2);
}

/************************************FOOTER******************************************/
footer{
    width:1100px;
    border-top: 2px solid rgba(81, 80, 80, 0.76);
}

footer p{
    padding-top:2%;
}

#in-touch{
    background-color: #6e5a48;
}

#reserve-now{
    background-color: #848a48;
}

#table-footer{
    font-weight:bold;
    font-size:110%;
}

input,
select,
textarea {
    max-width: 280px;
}

@media (max-width: 767px) {
  .body-content{
      max-width:85%;
      margin:auto;
      padding: 0;
  }
}

